docs: move some documentation from other repos

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -10,7 +10,7 @@ exclude_search = true
 		Concepts<i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
   <!-- TODO: relref to getting started -->
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "Getting Started" >}}">
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "Setup" >}}">
 		Get started<i class="fa-regular fa-download ml-2 "></i>
 	</a>
 </div>
