docs: remove deletedAt from API documentation, since it is removed from the backend with v6.0.6

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -7,11 +7,11 @@ exclude_search = true
 {{< blocks/cover title="Welcome to Envelope Zero!" image_anchor="center" height="max" color="dark" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "Concepts" >}}">
-		Concepts<i class="fas fa-arrow-alt-circle-right ml-2"></i>
+		Concepts
 	</a>
   <!-- TODO: relref to getting started -->
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "Setup" >}}">
-		Get started<i class="fa-regular fa-download ml-2 "></i>
+		Get started
 	</a>
 </div>
 {{< /blocks/cover >}}
@@ -24,7 +24,7 @@ All parts of the projects are free and Open Source.
 If you're new to this budgeting method, we recommend to check out the <a href="{{< relref "/docs/concepts" >}}">Concepts</a>. We'll explain how zero-based envelope budgeting works and you'll learn to use Envelope Zero along the way.
 {{% /blocks/lead %}}
 
-{{< blocks/section color="secondary">}}
+{{< blocks/section color="secondary" type="row" >}}
 {{% blocks/feature icon="far fa-question" title="Questions" %}}
 Ask <a href="https://github.com/orgs/envelope-zero/discussions">on GitHub</a> or send an email to team@envelope-zero.org
 {{% /blocks/feature %}}
